# chemcanvas

./: .gitignore  FEATURES_PROGRESS.md  MANIFEST.in  README.md  chemcanvas.py  com.ksharindam.chemcanvas.yaml  io.github.ksharindam.chemcanvas.yaml  marvin_sketch_complete_features.txt  pyproject.toml  setup.py  snapcraft.yaml  wittig_mechanism.mrv
.github/workflows/: build-flatpak.yml  build.yml  (+3 more)
AppImage/: AppRun  appimage_gen.sh  build-in-docker.sh  com.ksharindam.chemcanvas.appdata.xml  python3.7-stdlib.txt
Windows/: ChemCanvas.nsi  chemcanvas.spec  version_info.txt
chemcanvas/: __init__.py  app_data.py  arrow.py  atom.py  bond.py  bracket.py  canvas.py  common.py  coords_generator.py  delocalization.py  document.py  drawable.py  drawing_parents.py  fileformat.py  fileformat_ccdx.py  fileformat_ccml.py  fileformat_cdxml.py  fileformat_molfile.py  fileformat_mrv.py  fileformat_smiles.py  fileformat_svg.py  fileformats.py  geometry.py  graph.py  import_export.py  main.py  marks.py  molecule.py  name_to_structure.py  page_grid_dialog.py  page_setup_dialog.py  paper.py  periodic_table.csv  reagent_label_tool.py  resources_rc.py  settings_ui.py  shapes.py  smiles.py  template_manager.py  templates.xml  (+6 more)
data/: chemcanvas-mime.xml  chemcanvas.desktop  compile_rc  compile_ui  io.github.ksharindam.chemcanvas.metainfo.xml  mainwindow.ui  resources.qrc
debian/: changelog  control  copyright  rules
tests/: test_chemistry_rules.py  test_document_settings.py  test_name_to_structure.py  test_new_window.py  test_open_file.py  test_page_margins.py  test_zoom_controls.py
(+12 files in other folders)
